<resources>
    <string name="app_name">SoundSpace</string>

    <string name="toolbar_title">@string/app_name</string>

    <string name="create_soundscape_title">Create Soundscape</string>
    <string name="sound_library_title">Sound Library</string>
    <string name="your_soundscapes_title">Your Soundscapes</string>
    <string name="museum_tour_title">Museum Tour</string>
    <string name="record_title">Recording</string>

    <string name="login_main_action">Login</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="favorite_btn_description">Toggle favourite status</string>

    <string name="fab_rec_sound">Record sound</string>
    <string name="fab_sound_library">Sound library</string>
    <string name="create_play_btn_description">Play soundscape</string>
    <string name="create_save_btn">Save</string>
    <string name="volume_slider_btn_description">Toggle mute</string>

    <string name="record_stop_btn">Stop</string>
    <string name="record_save_btn">Save</string>
    <string name="record_play_btn">Play</string>
    <string name="record_dialog_filename_hint">Name</string>
    <string name="record_dialog_cancel_btn">Cancel</string>
    <string name="record_dialog_save_btn">Save</string>
    <string name="record_default_timer">00:00</string>
    <string name="record_dialog_title">Save</string>

    <string name="create_dialog_name_hint">Name</string>
    <string name="create_dialog_cancel_btn">Cancel</string>
    <string name="no_data_available">No data available</string>
    <string name="login_collection_id">Collection ID</string>
    <string name="record_btn_description">Record sound</string>
    <string name="soundscape_rename">Rename</string>
    <string name="soundscape_rename_dialog_title">Rename soundscape</string>
    <string name="delete">Delete</string>
    <string name="randomize_switch">Randomize</string>
    <string name="recordings_share">Upload</string>
    <string name="remove_sound">Remove sound</string>

    <!-- Error & success messages -->
    <string name="create_no_sounds_added_play">Add at least one sound</string>
    <string name="create_error_on_remove">Error removing sound, try again</string>
    <string name="create_project_save_success">Project saved</string>
    <string name="create_project_save_error">Error saving project, try another name</string>
    <string name="create_add_sound_error">Error adding sound, try again</string>
    <string name="your_soundscapes_delete_error">Error deleting soundscape, try again</string>
    <string name="your_soundscapes_rename_success">Project renamed</string>
    <string name="your_soundscapes_rename_error">Project could not be renamed, an error occurred</string>
    <string name="your_soundscapes_rename_error_name_taken">Name already taken</string>
    <string name="library_download_error">Download failed, try again</string>
    <string name="library_upload_success">Sound uploaded</string>
    <string name="library_upload_error">Upload failed, try again</string>
    <string name="library_preview_error">Preview failed to start, try again</string>
    <string name="library_delete_error">Delete failed, try again</string>
    <string name="login_collection_id_not_int">Please enter a numeric collection ID</string>
    <string name="login_failed">Login failed</string>
    <string name="login_no_name_or_password">Please enter a username and password</string>
    <string name="login_name_or_password_incorrect">Username or password incorrect</string>
    <string name="no_saved_soundscapes">You have no saved soundscapes</string>
    <string name="no_favorites_added">You have not added any sounds to favourites</string>
    <string name="no_recordings_added">You have no saved recordings</string>
    <string name="no_sounds_found">No sounds found</string>

    <string name="logout">Logout</string>
    <string name="search_menu_title">Search</string>
    <string name="saving_project">Saving…</string>
    <string name="library_buffering">Buffering…</string>
    <string name="library_delete_success">Sound deleted</string>
    <string name="library_select_done_action">Select</string>
    <string name="library_downloading">Downloading…</string>
    <string name="library_uploading">Uploading…</string>

</resources>
